Solved overflow problem

--- a/imports/ui/WelcomePage/_WelcomePage.scss
+++ b/imports/ui/WelcomePage/_WelcomePage.scss
@@ -11,7 +11,8 @@
 }
 
 .finish-element {
-  position: absolute;
+  position: fixed;
+  overflow: hidden;
   bottom: 0;
   left: 0;
   z-index: 1;
